--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.9.0",
     "@ionic-native/camera": "^4.9.0",
     "@ionic-native/core": "^4.8.0",
     "@ionic-native/device": "^4.9.0",
@@ -30,6 +31,8 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.1.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
@@ -52,7 +55,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "ios",
